--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -2,26 +2,29 @@ extent.reporter.klov.start=false
 extent.reporter.spark.start=true
 extent.reporter.json.start=true
 extent.reporter.pdf.start=true
+extent.reporter.html.start=true
 
 extent.reporter.klov.config=src/test/resources/klov.properties
-extent.reporter.spark.config=src/test/resources/extent-config.xml
+extent.reporter.spark.config=src/test/resources/spark-config.xml
+extent.reporter.html.config=src/test/resources/html-config.xml
 
 extent.reporter.spark.out=test-output/Spark/ExtentSpark.html
 extent.reporter.json.out=test-output/Json/ExtentJson.json
 extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
+extent.reporter.html.out=test-output/Html/ExtentHtml.html
 
-#test,dashboard,category,exception,author,device,log
+#test,exception,category,device,author,log,dashboard - default order
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
-#embed image as base64 string src default is false
+#embed image as base64 string src. Default is false
 #extent.reporter.spark.base64imagesrc=true
 
-screenshot.dir=test-output
+screenshot.dir=test-output/
 screenshot.rel.path=../
 
 systeminfo.os=Windows
 systeminfo.version=8.1
 
 #this is optional and creates the report in base folder name with date time format
-basefolder.name=CucumberExtent-Reports
+basefolder.name=reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
