--- a/cuke7-extent-adapter-report/src/test/resources/pdf-config1.yaml
+++ b/cuke7-extent-adapter-report/src/test/resources/pdf-config1.yaml
@@ -4,15 +4,13 @@ skipColor: a89132
 displayFeature: true
 displayScenario: true
 displayDetailed: true
-
+displayExpanded: false
+displayAttached: true
 summaryConfig:
    title: Grasshopper PDF Report
    dataBackgroundColor: 4F0CC8
    titleColor: FF0000
    dateColor: 969696
-   startTimeColor: 000000
-   endTimeColor: 000000
-   durationColor: 000000
    dial:
       featureRanges: 60 95
       scenarioRanges: 70 90
@@ -20,31 +18,25 @@ summaryConfig:
       badColor: f768a1
       averageColor: 93ffff
       goodColor: 32ecab
-   
 featureConfig:
-   itemcount: 10
    totalColor: FF0000
    durationColor: FF0000
-   
 scenarioConfig:
-   itemcount: 12
    totalColor: FF0000
    durationColor: FF0000
-   
 detailedFeatureConfig:
    featureNameColor: FF0000
-   startEndTimeColor: 000000
+   startEndTimeColor: 0
    tagColor: 404040
    dataHeaderColor: FFFFFF
    dataBackgroundColor: 404040
    totalColor: 0000FF
    durationColor: FFFFFF
-   durationBackgroundColor: 404040   
-   
+   durationBackgroundColor: 404040
 detailedScenarioConfig:
    featureNameColor: C0C0C0
    scenarioNameColor: FF0000
-   startEndTimeColor: 000000
+   startEndTimeColor: 0
    tagColor: 404040
    dataHeaderColor: FFFFFF
    dataBackgroundColor: 404040
@@ -52,12 +44,9 @@ detailedScenarioConfig:
    durationColor: FFFFFF
    durationBackgroundColor: 404040
    stepChartBarColor: 7f32a8
-   
 detailedStepHookConfig:
    stepTextColor: 0000FF
    hookTextColor: 00FF00
    durationColor: FF0000
-   errorMsgColor: 000000
-   logMsgColor: 000000
-   mediaMsgColor: FF0000
-   
+   errorMsgColor: 0
+   logMsgColor: 0
