--- a/cuke7-extent-adapter-report/pom.xml
+++ b/cuke7-extent-adapter-report/pom.xml
@@ -4,21 +4,23 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cuke7-extent-adapter-report</groupId>
 	<artifactId>cuke7-extent-adapter-report</artifactId>
-	<version>1.3.2</version>
+	<version>1.4.1</version>
+	<!-- <version>1.4.2</version> -->
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<cucumber.version>7.2.3</cucumber.version>
+		<cucumber.version>7.3.1</cucumber.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
 			<artifactId>extentreports-cucumber7-adapter</artifactId>
-			<version>1.3.2</version>
+			<version>1.4.1</version>
+			<!-- <version>1.4.2</version> -->
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -27,9 +29,11 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- <dependency> <groupId>io.cucumber</groupId> <artifactId>cucumber-testng</artifactId> 
+			<version>${cucumber.version}</version> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-testng</artifactId>
+			<artifactId>cucumber-junit</artifactId>
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -42,7 +46,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>4.1.3</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- <dependency> <groupId>org.testng</groupId> <artifactId>testng</artifactId> 
@@ -76,8 +80,11 @@
 							<goal>integration-test</goal>
 							<goal>verify</goal>
 						</goals>
+						<!-- <configuration> <properties> <property> <name>dataproviderthreadcount</name> 
+							<value>4</value> </property> </properties> </configuration> -->
 						<!-- <configuration> <parallel>methods</parallel> <threadCount>4</threadCount> 
 							<perCoreThreadCount>true</perCoreThreadCount> </configuration> -->
+
 					</execution>
 				</executions>
 			</plugin>
