--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -17,7 +17,7 @@ extent.reporter.html.out=test-output/Html/ExtentHtml.html
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
 #embed image as base64 string src. Default is false
-extent.reporter.spark.base64imagesrc=false
+extent.reporter.spark.base64imagesrc=true
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
