--- a/cuke7-extent-adapter-report/src/test/resources/pdf-config1.yaml
+++ b/cuke7-extent-adapter-report/src/test/resources/pdf-config1.yaml
@@ -66,4 +66,11 @@ detailedStepHookConfig:
    durationColor: FF0000
    errorMsgColor: 000000
    logMsgColor: 000000
+   #skipHooks: true
+   #skipScenarioHooks: false
+   #skipStepHooks: false
+   #skipScenarioBeforeHooks: false
+   #skipScenarioAfterHooks: false
+   #skipStepBeforeHooks: false
+   #skipStepAfterHooks: false
    
