Update for version 1.8.0

--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -17,7 +17,16 @@ extent.reporter.html.out=test-output/Html/ExtentHtml.html
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 
 #embed image as base64 string src. Default is false
-extent.reporter.spark.base64imagesrc=false
+#extent.reporter.spark.base64imagesrc=false
+
+#enable device & author. Default is false
+extent.reporter.spark.enable.device=true
+extent.reporter.spark.enable.author=true
+
+#prefix for device & author. Default is '@dev_' and '@aut_', case ignored
+#only considered if 'enabledevice' & 'enableauthor' are set to true
+#extent.reporter.spark.prefix.device=@device_
+#extent.reporter.spark.prefix.author=@author_
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
@@ -26,5 +35,10 @@ systeminfo.os=Windows
 systeminfo.version=8.1
 
 #this is optional and creates the report in base folder name with date time format
+#'reports 29-Feb-20 14-14-14'
 basefolder.name=reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
+#default is true
+#basefolder.enable.delimiter=true
+#default is space
+#basefolder.delimiter=_
