--- a/cuke7-extent-adapter-report/pom.xml
+++ b/cuke7-extent-adapter-report/pom.xml
@@ -4,21 +4,21 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cuke7-extent-adapter-report</groupId>
 	<artifactId>cuke7-extent-adapter-report</artifactId>
-	<version>1.7.0</version>
+	<version>1.8.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<cucumber.version>7.3.4</cucumber.version>
+		<cucumber.version>7.8.0</cucumber.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
 			<artifactId>extentreports-cucumber7-adapter</artifactId>
-			<version>1.7.0</version>
+			<version>1.8.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -29,18 +29,18 @@
 		</dependency>
 		<!-- <dependency> <groupId>io.cucumber</groupId> <artifactId>cucumber-testng</artifactId> 
 			<version>${cucumber.version}</version> <scope>test</scope> </dependency> -->
-		<!-- <dependency> <groupId>io.cucumber</groupId> <artifactId>cucumber-junit</artifactId> 
-			<version>${cucumber.version}</version> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
-			<artifactId>cucumber-testng</artifactId>
+			<artifactId>cucumber-junit</artifactId>
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- <dependency> <groupId>io.cucumber</groupId> <artifactId>cucumber-testng</artifactId> 
+			<version>${cucumber.version}</version> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>5.1.1</version>
+			<version>5.3.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
