--- a/cuke7-extent-adapter-report/src/test/resources/pdf-config1.yaml
+++ b/cuke7-extent-adapter-report/src/test/resources/pdf-config1.yaml
@@ -1,6 +1,7 @@
 passColor: 05a167
 failColor: ff00ff
 skipColor: a89132
+displayTag: true
 displayFeature: true
 displayScenario: true
 displayDetailed: true
