--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -14,7 +14,10 @@ extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
 extent.reporter.html.out=test-output/Html/ExtentHtml.html
 
 #test,exception,category,device,author,log,dashboard - default order
-extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
+extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
+
+#Status filter
+#extent.reporter.spark.statusfilter=Fail
 
 #embed image as base64 string src. Default is false
 #extent.reporter.spark.base64imagesrc=false
