--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -17,7 +17,7 @@ extent.reporter.html.out=test-output/Html/ExtentHtml.html
 extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
 
 #Status filter
-#extent.reporter.spark.statusfilter=Fail
+extent.reporter.statusfilter=Pass
 
 #embed image as base64 string src. Default is false
 #extent.reporter.spark.base64imagesrc=false
