--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -45,3 +45,5 @@ basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 #basefolder.enable.delimiter=true
 #default is space
 #basefolder.delimiter=_
+
+runner.count=5
