--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -3,6 +3,7 @@ extent.reporter.spark.start=true
 extent.reporter.json.start=true
 extent.reporter.pdf.start=true
 extent.reporter.html.start=true
+extent.reporter.excel.start=true
 
 extent.reporter.klov.config=src/test/resources/klov.properties
 extent.reporter.spark.config=src/test/resources/spark-config.xml
@@ -12,6 +13,7 @@ extent.reporter.spark.out=test-output/Spark/ExtentSpark.html
 extent.reporter.json.out=test-output/Json/ExtentJson.json
 extent.reporter.pdf.out=test-output/PdfReport/ExtentPdf.pdf
 extent.reporter.html.out=test-output/Html/ExtentHtml.html
+extent.reporter.excel.out=test-output/Excel/ExtentExcel.xlsx
 
 #test,exception,category,device,author,log,dashboard - default order
 extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
