--- a/cuke7-extent-adapter-report/src/test/resources/extent.properties
+++ b/cuke7-extent-adapter-report/src/test/resources/extent.properties
@@ -22,7 +22,7 @@ extent.reporter.spark.vieworder=dashboard,test,exception,category,device,author
 #extent.reporter.statusfilter=Fail
 
 #embed image as base64 string src. Default is false
-#extent.reporter.spark.base64imagesrc=false
+extent.reporter.spark.base64imagesrc=true
 
 #enable device & author. Default is false
 extent.reporter.spark.enable.device=true
