--- a/cuke7-extent-adapter-report/pom.xml
+++ b/cuke7-extent-adapter-report/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cuke7-extent-adapter-report</groupId>
 	<artifactId>cuke7-extent-adapter-report</artifactId>
-	<version>1.13.0</version>
+	<version>1.14.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,9 +18,13 @@
 		<dependency>
 			<groupId>tech.grasshopper</groupId>
 			<artifactId>extentreports-cucumber7-adapter</artifactId>
-			<version>1.13.0</version>
+			<version>1.14.0</version>
 			<scope>test</scope>
+			<!-- <exclusions> <exclusion> declare the exclusion here <groupId>org.freemarker</groupId> 
+				<artifactId>freemarker</artifactId> </exclusion> </exclusions> -->
 		</dependency>
+		<!-- <dependency> <groupId>org.freemarker</groupId> <artifactId>freemarker</artifactId> 
+			<version>2.3.32</version> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
